--- a/package.yaml
+++ b/package.yaml
@@ -46,7 +46,9 @@ dependencies:
 - case-insensitive
 - wai
 - http-types
-
+- wreq
+- stripe-haskell
+- stripe-core
 # The library contains all of our application code. The executable
 # defined below is just a thin wrapper.
 library:
